#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-24
2014-11-15 Mikhail S. Dubrovin	
- In all *BaseV*.h classes add method size_base() in order to resolve compilation with dbg problem (PSAS-67)

Tag: V00-05-23
2014-11-13 Mikhail S. Dubrovin
- NDArrIOV1 - get_ndarray() now returns reference in stead of ndarray; improve conditional output for debugging (PSAS-44).
	
Tag: V00-05-22
2014-11-11 Mikhail S. Dubrovin
- GlobalMethods - add method strDataTypeForEnum(...); NDArrIOV1.cpp - improve output supression (PSAS-44)
	
Tag: V00-05-21
2014-11-05 Mikhail S. Dubrovin
- add Epix100aBaseV1.h

Tag: V00-05-20
2014-07-03 Mikhail S. Dubrovin
- add VarShapeCameraBaseV1.h - for calibration of variable size arrays
	
Tag: V00-05-19
2014-06-30 Mikhail S. Dubrovin
- NDArrIOV1 - add constructor to load ndarray from file with metadata, w/o default initialization
- test/ex_ndarrio.cpp - add test for new constructor 
- test/test.data TYPE -> DTYPE
	
Tag: V00-05-18
2014-06-13 Mikhail S. Dubrovin
- in SConscript add DOCGEN="doxy-all psana-modules-doxy"
	
Tag: V00-05-17
2014-05-23 Mikhail S. Dubrovin
- add AndorBaseV1.h, Opal1000BaseV1.h, Opal4000BaseV1.h
- bring to common structure CsPadBaseV2.h, CsPad2x2BaseV2.h, PnccdBaseV1.h
- in NDArrIOV1.cpp do not throw exceptions for 1-d arrays 
	in case of variable data length for example for common_mode.
	
Tag: V00-05-16
2014-05-21 Mikhail S. Dubrovin
- in NDArrIOV1 add options for initialization of dedault constants
- add include/PrincetonBaseV1.h
	
Tag: V00-05-15
2014-05-16 Mikhail S. Dubrovin
- NDArrIOV1 - add "#include <cstring>" for RHEL6

Tag: V00-05-14
2014-05-15 Mikhail S. Dubrovin